<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/app_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/philosophy"
        android:icon="@drawable/philosophy"
        android:title="@string/app_philosophy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/app_search_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings_host"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/app_about"
        app:showAsAction="never" />
</menu>