<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/comment_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/vote"
                android:checkable="true"
                android:title="@string/comment_sort_vote"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/newest"
                android:checkable="true"
                android:title="@string/comment_sort_newest"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/oldest"
                android:checkable="true"
                android:title="@string/comment_sort_oldest"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>